--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,27 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&display=swap');
+
+@font-face {
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
+  src: url('https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap');
+}
+
+@font-face {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 600;
+  src: url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
+}
+
+@font-face {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  src: url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
+}
+
+* {
   margin: 0;
   padding: 0;
+  font-family: 'Oswald', sans-serif;
 }
 
 a {
