--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,43 @@ a {
 img {
   object-fit: cover;
 }
+
+.image1 {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+
+.middle1 {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image1 {
+  opacity: 0.3;
+}
+
+.container:hover .middle1 {
+  opacity: 1;
+}
+
+.text1 {
+  background-color: #4caf50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+.imageGrid {
+  height: 0;
+  padding-top: 100%;
+}
