--- a/src/App.css
+++ b/src/App.css
@@ -2,53 +2,49 @@
   margin: 0;
   padding: 0;
   font-family: 'Oswald', sans-serif;
-  
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+
 img {
   object-fit: cover;
 }
 
-.image1 {
-  opacity: 1;
-  display: block;
+.imagebox {
   width: 100%;
-  height: auto;
-  transition: 0.5s ease;
-  backface-visibility: hidden;
+  height: 100%;
+  transition-duration: 0.4s;
+  transition-timing-function: ease-in-out;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
-.middle1 {
-  transition: 0.5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
+.imagebox:hover {
+  box-shadow: inset 0 0 0 100vw rgba(222, 37, 72, 0.8);
 }
 
-.container:hover .image1 {
-  opacity: 0.3;
+.imagebox h1,
+h4 {
+  visibility: hidden;
 }
 
-.container:hover .middle1 {
-  opacity: 1;
+.imagebox:hover h1 {
+  padding: 10px;
+  font-size: 20px;
+  visibility: visible;
+  font-weight: 400;
+  align-self: flex-start;
 }
 
-.text1 {
-  background-color: #4caf50;
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
-}
-
-.imageGrid {
-  height: 0;
-  padding-top: 100%;
+.imagebox:hover h4 {
+  font-weight: 400;
+  padding: 0 10px;
+  font-size: 14px;
+  align-self: flex-start;
+  visibility: visible;
 }
